# epsonscan2

./: AUTHORS  CMakeLists.txt  LICENSE  NEWS  README  changelog.Debian  cleancmake.sh  epsonscan2_.ts  install-deps
src/: CMakeLists.txt  Config.h.in  Platform.cpp  Platform.h
src/CommonUtility/: DbgLog.cpp  DbgLog.h  ESCommonTypedef.h  ESImageInfo.cpp  ESImageInfo.h  ESReferenceCounter.h  ESResultString.h  ESproperty.h  PerformanceLog.h  stdafx.h
src/CommonUtility/Linux/: CMakeLists.txt
src/CommonUtility/utils/: CritSec.cpp  CritSec.h  ESAnyCastUtils.h  ESArchiveUtils.h  ESBuffer.cpp  ESBuffer.h  ESFile.cpp  ESFile.h  ESJsonUtils.cpp  ESJsonUtils.h  ESMutex.cpp  ESMutex.h  ESZipfileUtils.h  PathUtils.cpp  PathUtils.h  Utilities.cpp  Utilities.h  debugstream.h  stringutils.cpp  stringutils.h
src/CommonUtility/utils/Json/: JsonCommon.h  JsonObject.hpp  JsonObjectAny.hpp  JsonObjectArray.hpp  JsonObjectDictionary.hpp  JsonObjectMultiArray.hpp  JsonObjectNoData.hpp  JsonObjectPoint.hpp  JsonObjectRange.hpp  JsonObjectRect.hpp  JsonObjectSize.hpp
src/Controller/: CMakeLists.txt
src/Controller/Src/: Controller.cpp  Controller.hpp  EntryPoints.cpp  Error.hpp  Utility.hpp
src/Controller/Src/FileFormat/: ESManageFileFormatKit.cpp  ESManageFileFormatKit.h  FFManager.cpp  FFManager.hpp  ofdplugin.h
src/Controller/Src/Filter/: ColorToGray.hpp  DDEFilter.cpp  DDEFilter.hpp  DTR.cpp  DTR.hpp  ESIMP2.cpp  ESIMP2.hpp  ESIMP2Wrapper.h  Filter.cpp  Filter.hpp  Gamma10To18.hpp  GetOrientation.cpp  GetOrientation.hpp  GrayToMono.hpp  JpegDecode.hpp  Lut.cpp  Lut.hpp  MonoToGray.hpp  Padding.hpp  ProcOrientation.cpp  ProcOrientation.hpp  Resize.cpp  Resize.hpp  Saving.hpp
src/Controller/Src/Finder/: .UsbFinder.cpp.swp  DeviceResolver.cpp  DeviceResolver.hpp  Finder.cpp  Finder.hpp  NetFinder.cpp  NetFinder.hpp  UsbFinder.cpp  UsbFinder.hpp
src/Controller/Src/KeysValues/: Key.cpp  Key.hpp  KeyDataProvider.hpp  KeyMgr.cpp  KeyMgr.hpp
src/Controller/Src/ModelInfo/: ModelInfo.cpp  ModelInfo.hpp
src/Controller/Src/Scanner/: Engine.cpp  Engine.hpp  Scanner.cpp  Scanner.hpp
src/Controller/Src/Transfer/: Image.cpp  Image.hpp  TransferEvent.cpp  TransferEvent.hpp  TransferMgr.cpp  TransferMgr.hpp
src/Controller/Test/: CMakeLists.txt  ControllerTest.cpp
src/DetectAlert/: CMakeLists.txt  DetectAlert.pro  detectalert.cpp  detectalert.h  detectalert.qrc  detectalert_automoc.cpp  main.cpp  moc_detectalert.cpp  translationstring.cpp  translationstring.h
src/ES2Command/Linux/: CMakeLists.txt
src/ES2Command/Src/: stdafx.h
src/ES2Command/Src/API/: ES2CommandAPI.cpp
src/ES2Command/Src/Command/: ESScanner.cpp  ESScanner.h  ESScannerDefs.h  ESScanner_Capability.cpp  Environment.cpp  Environment.h  ModelInfo.cpp  ModelInfo.h
src/ES2Command/Src/Image/: ESCI2ScannedImage.cpp  ESCI2ScannedImage.h  ESScannedImage.cpp  ESScannedImage.h
src/ES2Command/Src/Interface/: IInterface.h  interface.cpp  interface.h  interfaceFactory.cpp  interfaceFactory.h  interfaceImpl.h
src/ES2Command/Src/Resource/: ModelInfo.json
src/ES2Command/Src/Utils/: ESAccessor.h  ESDebugLog.h  ESUtils.cpp  ESUtils.h  Endian.h  event_caller.hpp  semaphore.hpp  shared_memory.hpp
src/ES2Emulator/: Emulator.cpp  Emulator.h  EmulatorSettings.cpp  EmulatorSettings.h  stdafx.cpp  stdafx.h
src/ES2Emulator/Linux/: CMakeLists.txt
src/ES2Emulator/test/: CMakeLists.txt  test.cpp
src/ES2FileFormat/: FileFormatKit.cpp  dllmain.cpp  resource.h  stdafx.h  targetver.h
src/ES2FileFormat/Header/IO/: FKDestination.h  FKSource.h
src/ES2FileFormat/Header/Reader/: FKReader.h
src/ES2FileFormat/Header/Writer/: FKWriter.h
src/ES2FileFormat/Linux/: CMakeLists.txt
src/ES2FileFormat/Source/Base/: FKConcreteReaderProtocol.h  FKConcreteWriterProtocol.h  FKReader.cpp  FKWriter.cpp
src/ES2FileFormat/Source/BmpUtil/: FKBmpUtil.cpp  FKBmpUtil.h
src/ES2FileFormat/Source/IO/: FKDestination.cpp  FKSource.cpp
src/ES2FileFormat/Source/JpegUtil/: FKJpegDecodeUtil.cpp  FKJpegDecodeUtil.h  FKJpegEncodeUtil.cpp  FKJpegEncodeUtil.h  jpegUserDefines.h
src/ES2FileFormat/Source/PngUtil/: FKPngEncodeUtil.cpp  FKPngEncodeUtil.h
src/ES2FileFormat/Source/PnmUtil/: FKPnmUtil.cpp  FKPnmUtil.h
src/ES2FileFormat/Source/Reader/: FKBmpReader.cpp  FKBmpReader.h  FKJpegReader.cpp  FKJpegReader.h  FKTiffReader.h
src/Include/: Config.h  IESBuffer.h  es2CommnoType.h
src/Include/Controller/: EpsonScan2.h
src/Include/ES2Command/: ES2CommandAPI.h  ESCommandProperties.h  ESPropertyKeys.h  IESScannedImage.h  IESScanner.h
src/Include/ES2FileFormat/: FKPAPI.h  FKReaderKeys.h  FKWriterKeys.h  FileFormatKit.h  FileFormatKitErrors.h
src/SaneWrapper/: backend.cpp  backend.h  defines.h  device.h  epsonopts.h  epsonsane.h  epsonscan.cpp  epsonscan.h  list.cpp  list.h  message.cpp  message.h  version.hpp
src/SaneWrapper/Linux/: CMakeLists.txt
src/ScanSDK/: CMakeLists.txt
src/Standalone/: CMakeLists.txt  aboutepsonscan2dialog.cpp  aboutepsonscan2dialog.h  aboutepsonscan2dialog.ui  acpowercombobox.cpp  acpowercombobox.h  addeditpagedialog.cpp  addeditpagedialog.h  addeditpagedialog.ui  addpagedialog.cpp  addpagedialog.h  addpagedialog.ui  addpagescheckbox.cpp  addpagescheckbox.h  adfpaperprotectioncombobox.cpp  adfpaperprotectioncombobox.h  administratorpasswordinputdialog.cpp  administratorpasswordinputdialog.h  administratorpasswordinputdialog.ui  administratorpasswordinputforuksecuritydialog.cpp  administratorpasswordinputforuksecuritydialog.h  administratorpasswordinputforuksecuritydialog.ui  afmtimeoutcombobox.cpp  afmtimeoutcombobox.h  autocroppinginscribedcheckbox.cpp  autocroppinginscribedcheckbox.h  automaticfeedingmodecombobox.cpp  automaticfeedingmodecombobox.h  automaticfeedingmodedialog.cpp  automaticfeedingmodedialog.h  automaticfeedingmodedialog.ui  backgroundcolorcombobox.cpp  backgroundcolorcombobox.h  batterypowercombobox.cpp  batterypowercombobox.h  behaviorwhendoublefeedcombobox.cpp  behaviorwhendoublefeedcombobox.h  blackedgeinscribecheckbox.cpp  blackedgeinscribecheckbox.h  brightnessslider.cpp  (+263 more)
src/Standalone/icons/: icon.qrc
(+1816 files in other folders)
